--- a/FunctionalProgramming.cabal
+++ b/FunctionalProgramming.cabal
@@ -38,6 +38,7 @@ library
     , directory
     , parallel
     , matrix
+    , text
   default-language: Haskell2010
 
 executable FunctionalProgramming-exe
@@ -54,6 +55,7 @@ executable FunctionalProgramming-exe
     , directory
     , parallel
     , matrix
+    , text
   default-language: Haskell2010
 
 test-suite FunctionalProgramming-test
@@ -70,4 +72,5 @@ test-suite FunctionalProgramming-test
     , base >=4.7 && <5
     , hspec
     , matrix
+    , text
   default-language: Haskell2010
